Fixed product block on mobile

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,4 +1,77 @@
 @media screen and (max-width: 429px) {
+  // Modals
+  .uk-modal {
+    &.uk-open {
+      & > .uk-modal-dialog {
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 10px;
+        padding: 1.5rem;
+        box-shadow: 0px 0px 100px rgba(116, 116, 116, 0.1);
+      }
+    }
+    .uk-modal-dialog {
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      padding: 5.5625rem 10.875rem 6.5rem 5.375rem;
+      box-shadow: 0px 0px 100px rgba(116, 116, 116, 0.1);
+      width: 850px;
+      .uk-modal-close {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        svg {
+          width: 16px;
+          path {
+            fill: gray;
+            -webkit-transition: all .3s;
+            -moz-transition: all .3s;
+            -ms-transition: all .3s;
+            -o-transition: all .3s;
+            transition: all .3s;
+          }
+        }
+        &:hover {
+          svg {
+            path {
+              fill: $mainColorBlack;
+              -webkit-transition: all .3s;
+              -moz-transition: all .3s;
+              -ms-transition: all .3s;
+              -o-transition: all .3s;
+              transition: all .3s;
+            }
+          }
+        }
+      }
+      h3 {
+        font-family: Raleway, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 1.25rem;
+        line-height: 30px;
+        color: $mainColorBlack;
+      }
+      p, li {
+        font-family: Raleway, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 1.25rem;
+        line-height: 30px;
+        color: $mainColorBlack;
+      }
+      ul {
+        li {
+          margin-bottom: 1rem;
+        }
+      }
+    }
+  }
+
   // Header
   * {
     --bs-gutter-x: 0;
@@ -268,6 +341,23 @@
               }
             }
           }
+        }
+      }
+    }
+    .is-product {
+      &__card {
+        img {
+          display: block;
+          margin: 0 auto;
+        }
+        p, h3 {
+          padding: 0rem 1.5rem;
+          margin-bottom: 1rem;
+          max-width: 90%;
+          margin: 0 auto 1rem;
+        }
+        h3 {
+          height: auto;
         }
       }
     }
